--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,22 +8,24 @@
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png">
     <link rel="stylesheet" href="css/style.css">
-</head>
+    <script defer src="https://kit.fontawesome.com/6a20098ea0.js" crossorigin="anonymous"></script>
+
 <body>
-    <div class="container">
+    <div id="container" class="container">
         <div class="sky">
             <div class="trees"></div>
-            <div class="track"></div>
-            <div class="car">
+            <div id="track" class="track"></div>
+            <i id="btn"></i>
+            <div id="car" class="car">
                 <div class="wheel wheel1">
-                    <img src="others/car_wheel_left.png" alt="wheel1">
+                    <img id="Wheel1" src="others/car_wheel_left.png" alt="wheel1">
                 </div>
                 <div class="wheel wheel2">
-                    <img src="others/car_wheel_right.png" alt="wheel2">
+                    <img id="Wheel2" src="others/car_wheel_right.png" alt="wheel2">
                 </div>
             </div>
         </div>
     </div>
 </body>
-<script src="js/script.js"></script>
+<script defer src="js/script.js"></script>
 </html>
