--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="trees"></div>
             <div id="track" class="track"></div>
             <i id="btn"></i>
+            <audio id="audio" src="" loop autoplay></audio>
             <div id="car" class="car">
                 <div class="wheel wheel1">
                     <img id="Wheel1" src="others/car_wheel_left.png" alt="wheel1">
