Improve in responses

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Car Animation</title>
     <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png">
-    <link rel="stylesheet" href="css/style.css">
-    <script defer src="https://kit.fontawesome.com/6a20098ea0.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" type="text/css" href="style.css">
+<!--replil
+<link href="css//style.css" rel="stylesheet" type="text/css" /> -->
 
 <body>
     <div id="container" class="container">
@@ -19,14 +20,15 @@
             <audio id="audio" src="" loop autoplay></audio>
             <div id="car" class="car">
                 <div class="wheel wheel1">
-                    <img id="Wheel1" src="others/car_wheel_left.png" alt="wheel1">
+                    <img id="Wheel1" src="car_wheel_left.png" alt="wheel1">
                 </div>
                 <div class="wheel wheel2">
-                    <img id="Wheel2" src="others/car_wheel_right.png" alt="wheel2">
+                            <img id="Wheel2" src="car_wheel_right.png" alt="wheel2">
                 </div>
             </div>
         </div>
     </div>
 </body>
-<script defer src="js/script.js"></script>
+<script defer src="script.js"></script>
+<script defer src="https://kit.fontawesome.com/6a20098ea0.js" crossorigin="anonymous"></script>
 </html>
