--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Animation</title>
-    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png">
-<link rel="stylesheet" type="text/css" href="style.css">
-<!--replil
-<link href="css//style.css" rel="stylesheet" type="text/css" /> -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 
 <body>
     <div id="container" class="container">
@@ -23,7 +22,7 @@
                     <img id="Wheel1" src="car_wheel_left.png" alt="wheel1">
                 </div>
                 <div class="wheel wheel2">
-                            <img id="Wheel2" src="car_wheel_right.png" alt="wheel2">
+                    <img id="Wheel2" src="car_wheel_right.png" alt="wheel2">
                 </div>
             </div>
         </div>
@@ -31,4 +30,5 @@
 </body>
 <script defer src="script.js"></script>
 <script defer src="https://kit.fontawesome.com/6a20098ea0.js" crossorigin="anonymous"></script>
+
 </html>
